更新模式選擇和優化架構

--- a/index.html
+++ b/index.html
@@ -24,50 +24,10 @@
             <option value="black">黑色</option>
             <option value="white">白色</option>
         </select>
-        <button id="startGameButton">開始遊戲</button>
-    </div>
-
-    <div id="gamepage" class="page" style="display:none;">
-        <div id="score">分數: 0</div>
-        <canvas id="game" width="800" height="800"></canvas>
-    </div>
-
-    <div id="gameOverPage" class="page" style="display:none;">
-        <h2>遊戲結束</h2>
-        <div id="finalScore">你的分數: 0</div>
-        <button id="playAgainButton">再玩一局</button>
-        <button id="goToHomePageButton">返回首頁</button>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-
-</html>
-<!DOCTYPE html>
-<html lang="zh-Hant">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>超簡單貪食蛇</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-    <div id="homepage" class="page">
-        <img src="snake-icon.png" alt="貪食蛇圖示">
-        <h1>超簡單貪食蛇</h1>
-        <select id="colorPicker">
-            <option value="red">紅色</option>
-            <option value="orange">橙色</option>
-            <option value="yellow">黃色</option>
-            <option value="green">綠色</option>
-            <option value="blue">藍色</option>
-            <option value="indigo">靛色</option>
-            <option value="purple">紫色</option>
-            <option value="black">黑色</option>
-            <option value="white">白色</option>
+        <select id="difficultyPicker">
+            <option value="2">傻逼模式</option>
+            <option value="1" selected>普通模式</option>
+            <option value="0.5">瘋狗模式</option>
         </select>
         <button id="startGameButton">開始遊戲</button>
     </div>
